--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ html{
     scroll-behavior: smooth;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 /* custom scroll bar */
 ::-webkit-scrollbar {
     width: 10px;
@@ -167,8 +169,59 @@ section .title::after{
     top: 0;
     left: 0;
 }
+.home .max-width{
+    display: flex;
+}
+.home .max-width .right{
+  width:60%;
+}
+
+.home .max-width .right{
+    width:60%;
+    justify-self: flex-end;
+}
+.home .max-width img{
+    width: 100%;
+    object-fit: contain;
+}
+
+.home .home-content{
+    width:40%;
+    align-self: center;
+}
+.home .home-content .text-1{
+    max-width: 400px;
+    font-size: 40px;
+    font-family: 'Noto Serif', serif;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.home .home-content .text-1 p span{
+    color: crimson;
+}
 
 
+.home .home-content a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    font-weight: 400;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.home .home-content a:hover{
+    color: crimson;
+    background: none;
+    z-index: 2;
+}
 
 /* ABOUT SECTION */
 .about .title::after{
@@ -232,7 +285,8 @@ section .title::after{
 .services .serv-content{
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-column-gap: 50px
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
 }
 
 .services .serv-content .card{
@@ -253,8 +307,22 @@ section .title::after{
     background-color: #99738E;
 }
 
+.services .serv-content .card:hover .box{
+    transform: scale(1.1);
+}
+
 
 /* SKILLS */
+
+.skills{
+    background: url('../images/mini-profile-bg-02.jpg');
+    background-position: 0 0;
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-attachment: fixed;
+
+}
 
 .skills .title::after{
     content: "what I know";
@@ -265,6 +333,44 @@ section .title::after{
     grid-template-columns: 50% 50%;
 }
 
+
+.skills .skills-content .left .text{
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 15px;
+    margin-top: 20px;
+}
+
+.skills .skills-content .right .info{
+    display: flex;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 20px;
+}
+
+.skills .skills-content .right span{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.skills .skills-content .right .line{
+    position: relative;
+    width: 100%;
+    height: 15px;
+    background-color: grey;
+}
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    width:80%;
+    height: 15px;
+    background-color: red;
+    top: 0;
+    left: 0;
+}
 
 /* CONTACT */
 
@@ -278,8 +384,128 @@ section .title::after{
     color: white;
     background-color: #2F2FA2;
 }
+.contact .contact-content{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.contact .contact-content .left .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
 
 
+.contact .contact-content .left p{
+    letter-spacing: 2px;
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+
+.contact .contact-content .left .row {
+   margin-bottom: 20px;
+}
+
+.contact .contact-content .right .text{
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 15px;
+ }
+
+ .contact .contact-content .right form .fields .field,
+ .contact .contact-content .right form .field{
+     width: 100%;
+     height: 45px;
+     margin-bottom: 15px;
+ }
+
+ .contact .right form .field.textarea{
+    height: 170px;
+    width: 100%;
+}
+ .contact .contact-content .right .fields{
+     display: grid;
+     grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+     grid-column-gap: 10px;
+ }
+
+ .contact .contact-content .right .field input,
+ .contact .contact-content .right .textarea textarea{
+     padding: 0 15px;
+     border-radius: 6px;
+     outline: none;
+     font-size: 21px;
+     width: 100%;
+     height: 100%;
+     border:1px solid lightgrey;
+ }
+
+ .contact .contact-content .right .textarea textarea{
+     resize: none;
+     padding-top: 10px;
+ }
+
+ .contact .contact-content form .button-area{
+     background-color: #F64C72;
+     max-width: 200px;
+ }
+
+ .contact .contact-content form .button-area button{
+     color:#fff;
+     width: 100%;
+     background-color: transparent;
+     outline: none;
+     border:none;
+     padding:25px;
+     font-size: 18;
+     font-weight: 600;
+ }
+
+
+ /* scroll up button styling */
+
+ .scroll-button{
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: crimson;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    border-bottom-width: 2px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+
+ }
+
+ .scroll-button.show{
+     pointer-events: auto;
+     animation-name: fromTop;
+     animation-duration: 1s;
+     opacity: 1;
+ }
+
+ @keyframes fromTop{
+   0%{
+         top:0px;
+         opacity: 0;
+     }
+     50%{
+         top: 40px;
+         opacity: 0.5;
+     }
+     100%{
+         bottom: 30px;
+         opacity: 1;
+     }
+ }
 /* media query styling start */
 
 @media(max-width: 797px) {
